docs: documentar teste de integracao ToolCallingIT e logs